--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.2.0",
-    "ejs": "~2.5.5",
-    "express": "~4.13.4",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "ejs": "^2.5.9",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1",
+    "serve-favicon": "^2.5.0"
   }
 }
